gateway/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    name: gateway-system
    app.kubernetes.io/part-of: planmyjourney
