gateway/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  labels:
    app.kubernetes.io/part-of: planmyjourney
    app.kubernetes.io/managed-by: argocd
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: nlb-config
    namespace: gateway-system
