gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: planmyjourney
    app.kubernetes.io/managed-by: argocd
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
